--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 sudo: required
 language: node_js
-
+cache: npm
+node_js:
+- '8'
 before_install:
-- gem install sass
-- gem install scss_lint
 - npm install -g npm
-- npm install promise
 before_script:
 - npm install -g gulp
 script:
 - gulp deploy
-- gulp optmize
+- gulp optimize
