--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,8 @@ sudo: required
 language: node_js
 cache: npm
 node_js:
-- '8'
+- '10'
 before_install:
 - npm install -g npm
-before_script:
-- npm install -g gulp
 script:
-- gulp deploy
-- gulp optimize
+- npm run build
